--- a/app/src/main/res/layout/activity_volunteer__register_info.xml
+++ b/app/src/main/res/layout/activity_volunteer__register_info.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/drawer_layoutreg"
     tools:context=".Volunteer_RegisterInfo">
     <LinearLayout
         android:layout_width="match_parent"
