--- a/app/src/main/res/layout/activity_create_disaster_event.xml
+++ b/app/src/main/res/layout/activity_create_disaster_event.xml
@@ -217,6 +217,18 @@
 
             >
             </Button>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Reset"
+            android:textColor="#000"
+            android:background="#6767"
+            android:id="@+id/btn_resetButton"
+
+            >
+        </Button>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -226,6 +238,8 @@
             android:paddingLeft="10dp"
             android:textSize="20sp">
         </TextView>
+
+
     </LinearLayout>
 
     <LinearLayout
