--- a/app/src/main/res/layout/activity_create_disaster_event.xml
+++ b/app/src/main/res/layout/activity_create_disaster_event.xml
@@ -7,14 +7,29 @@
     android:orientation="vertical"
     tools:context=".Create_Disaster_Event_On_Map">
 
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Afet Bilgileri:"
-        android:paddingLeft="12dp"
-        android:textSize="25sp">
-    </TextView>
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Afet Bilgileri:"
+            android:paddingLeft="12dp"
+            android:textSize="25sp"
+            android:layout_gravity="left"
+            android:layout_weight="1">
+        </TextView>
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_weight="1"
+            android:id="@+id/mainDisasterSpinner">
+
+        </Spinner>
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
@@ -33,7 +48,7 @@
         android:paddingRight="16dp"
         tools:ignore="MissingConstraints">
 
-        <EditText
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/afet_id"
@@ -45,7 +60,59 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Afet Adress:"
+        android:text="Afet Parçası İsmi:"
+        android:paddingLeft="16dp"
+        android:textSize="10sp">
+    </TextView>
+
+    <LinearLayout
+        android:id="@+id/AfetSubpartLayout"
+        android:layout_width="match_parent"
+        android:layout_height="34dp"
+        android:layout_weight="0"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        tools:ignore="MissingConstraints">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/afet_subpart_name"
+            android:textSize="12dp"
+            android:layout_weight="1"
+            />
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Afet Parçası ID:"
+        android:paddingLeft="16dp"
+        android:textSize="10sp">
+    </TextView>
+
+    <LinearLayout
+        android:id="@+id/AfetSubpartIDLayout"
+        android:layout_width="match_parent"
+        android:layout_height="34dp"
+        android:layout_weight="0"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        tools:ignore="MissingConstraints">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/afet_subpart_ID"
+            android:textSize="12dp"
+            android:layout_weight="1"
+            />
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Afet Adresi:"
         android:paddingLeft="16dp"
         android:textSize="10sp">
     </TextView>
@@ -71,7 +138,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Afet Latitude:"
+        android:text="Afet Enlem Bilgisi:"
         android:paddingLeft="16dp"
         android:textSize="10sp">
     </TextView>
@@ -97,7 +164,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Afet Longitude:"
+        android:text="Afet Boylam Bilgisi:"
         android:paddingLeft="16dp"
         android:textSize="10sp">
     </TextView>
@@ -123,7 +190,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Missing Person:"
+        android:text="Kayıp İnsan Sayısı:"
         android:paddingLeft="16dp"
         android:textSize="10sp">
     </TextView>
@@ -149,7 +216,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Rescued Person:"
+        android:text="Kurtarılan İnsan Sayısı:"
         android:paddingLeft="16dp"
         android:textSize="10sp">
     </TextView>
@@ -172,31 +239,48 @@
             />
     </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Is Open For Volunteers:"
-        android:paddingLeft="16dp"
-        android:textSize="10sp">
-    </TextView>
-
-    <LinearLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/AfetIsOpenForVolunteersLayout"
         android:layout_width="match_parent"
-        android:layout_height="34dp"
-        android:layout_weight="0"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        tools:ignore="MissingConstraints">
-
-        <EditText
+        android:layout_height="40dp"
+        android:orientation="vertical"
+        >
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/afet_isOpenForVolunteers"
-            android:textSize="12dp"
-            android:layout_weight="1"
-            />
-    </LinearLayout>
+            android:paddingLeft="16dp"
+            android:text="Gönüllülere Açık Mı:"
+            android:textColor="@color/black"
+            android:textSize="10sp" />
+
+        <RadioGroup
+            android:id="@+id/groupForVolunteers"
+            android:orientation="horizontal"
+            android:paddingLeft="90dp"
+            android:paddingRight="90dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+            <RadioButton
+                android:id="@+id/btnforVolunteerYes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="EVET"
+                android:textSize="10sp"/>
+
+            <RadioButton
+                android:id="@+id/btnforVolunteerNo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="HAYIR"
+                android:textSize="10sp"/>
+
+        </RadioGroup>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <LinearLayout
         android:id="@+id/AfetBilgiOlusturLayout"
@@ -209,19 +293,17 @@
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Create"
+            android:layout_height="match_parent"
+            android:text="Oluştur"
             android:textColor="#000"
             android:background="#1212"
-            android:id="@+id/btn_createDisaster"
-
-            >
+            android:id="@+id/btn_createDisaster">
             </Button>
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Reset"
+            android:layout_height="match_parent"
+            android:text="Sıfırla"
             android:textColor="#000"
             android:background="#6767"
             android:id="@+id/btn_resetButton"
@@ -231,14 +313,13 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Coordinates "
+            android:layout_height="match_parent"
+            android:text="Koordinatlar "
             android:id="@+id/coordinateText"
             android:textColor="#000"
             android:paddingLeft="10dp"
             android:textSize="20sp">
         </TextView>
-
 
     </LinearLayout>
 
